--- a/index.html
+++ b/index.html
@@ -8,80 +8,16 @@
   <meta name="color-scheme" content="light only">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" as="style" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" />
-  <style>
-    :root{
-      --bg: #ffffff; --text: #0f172a; --muted:#475569; --brand:#003366; --accent:#0ea5e9; --line:#e2e8f0;
-      --card:#f8fafc; --shadow:0 10px 30px rgba(2,6,23,.08);
-    }
-    *{box-sizing:border-box}
-    html,body{margin:0; padding:0; font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background:var(--bg); color:var(--text)}
-    a{color:var(--brand); text-decoration:none}
-    a:hover{text-decoration:underline}
-    .container{width:min(1100px, 92%); margin-inline:auto}
-    header{position:sticky; top:0; backdrop-filter:saturate(180%) blur(8px); background:rgba(255,255,255,.9); border-bottom:1px solid var(--line); z-index:50}
-    .nav{display:flex; align-items:center; justify-content:space-between; padding:.9rem 0}
-    .nav a.logo{display:flex; align-items:center; gap:.65rem; font-weight:700; color:var(--text)}
-    .nav .links{display:flex; gap:1rem; align-items:center}
-    .nav .links a{padding:.5rem .75rem; border-radius:10px}
-    .nav .links a:hover{background:var(--card)}
-    .lang-toggle{display:inline-flex; border:1px solid var(--line); border-radius:999px; overflow:hidden}
-    .lang-toggle button{padding:.35rem .65rem; border:0; background:none; font-weight:600; color:var(--muted); cursor:pointer}
-    .lang-toggle button.active{background:var(--text); color:#fff}
-
-    .hero{display:grid; grid-template-columns: 1.2fr .8fr; gap:2rem; align-items:center; padding:3rem 0}
-    .hero h1{font-size:clamp(1.8rem, 3vw, 3rem); line-height:1.1; margin:0}
-    .hero p.lead{font-size:clamp(1rem, 1.3vw, 1.2rem); color:var(--muted)}
-    .hero .cta{display:flex; gap:.8rem; flex-wrap:wrap; margin-top:1rem}
-    .btn{display:inline-flex; align-items:center; gap:.5rem; border:1px solid var(--text); color:#fff; background:var(--text); padding:.7rem 1rem; border-radius:12px; font-weight:600}
-    .btn.secondary{background:#fff; color:var(--text)}
-    .btn:hover{box-shadow:var(--shadow)}
-    .headshot{width:100%; aspect-ratio:1/1; object-fit:cover; border-radius:24px; box-shadow:var(--shadow); background:#e5e7eb}
-
-    .section{padding:2.5rem 0; border-top:1px solid var(--line)}
-    .section h2{font-size:1.6rem; margin:0 0 1rem}
-    .chips{display:flex; gap:.6rem; flex-wrap:wrap}
-    .chip{padding:.5rem .7rem; border:1px solid var(--line); border-radius:999px; background:#fff; font-weight:600}
-
-    .cards{display:grid; grid-template-columns:repeat(12, 1fr); gap:1rem}
-    .card{grid-column: span 12; background:var(--card); border:1px solid var(--line); border-radius:18px; padding:1rem; box-shadow:var(--shadow)}
-    .card h3{margin:.3rem 0 .5rem}
-
-    /* Featured project larger */
-    .card.featured{grid-column: span 12}
-
-    /* Resume grid */
-    .resume-grid{display:grid; grid-template-columns: 1fr 1fr; gap:1rem}
-    .timeline{border-left:3px solid var(--line); padding-left:1rem}
-    .timeline-item{margin-bottom:1rem}
-    .timeline-item h4{margin:.1rem 0}
-    .meta{color:var(--muted); font-size:.95rem}
-
-    /* Contact */
-    .contact{display:grid; grid-template-columns: 1fr; gap:1rem}
-    .social{display:flex; gap:.7rem; align-items:center; flex-wrap:wrap}
-    .pill{display:inline-flex; align-items:center; gap:.5rem; padding:.55rem .8rem; border:1px solid var(--line); border-radius:999px; background:#fff}
-
-    /* Sticky mobile nav */
-    .mobile-nav{position:sticky; bottom:0; border-top:1px solid var(--line); background:#fff; display:none}
-    .mobile-nav .bar{display:flex; justify-content:space-around; padding:.5rem}
-    .mobile-nav a{display:flex; flex-direction:column; align-items:center; font-size:.8rem; color:var(--muted); padding:.35rem .2rem}
-
-    /* Responsive */
-    @media (max-width: 900px){
-      .hero{grid-template-columns:1fr; padding:2rem 0}
-    }
-    @media (max-width: 720px){
-      .resume-grid{grid-template-columns:1fr}
-      .mobile-nav{display:block}
-      header{position:sticky}
-    }
-  </style>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <meta property="og:image" content="assets/img/social-preview.png">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="George P Mathew – Portfolio">
+  <meta property="og:description" content="Civil Engineer | Materials Engineering Candidate at RWTH Aachen. Available for Werkstudent & junior roles in Germany.">
 </head>
 <body>
   <header>
     <div class="container nav" role="navigation" aria-label="Main">
       <a class="logo" href="#home" aria-label="Home">
-        <!-- Simple monogram SVG -->
         <svg width="28" height="28" viewBox="0 0 24 24" fill="none" aria-hidden="true"><rect width="24" height="24" rx="6" fill="var(--text)"/><path d="M6 17V7h3.5c2.5 0 4 1.6 4 3.6 0 1.4-.8 2.7-2.1 3.2L16 17h-2.6l-3-3H8.6V17H6Zm2.6-8.2v3h1.7c1 0 1.6-.6 1.6-1.5s-.6-1.5-1.6-1.5H8.6Z" fill="#fff"/></svg>
         <span>George&nbsp;P&nbsp;Mathew</span>
       </a>
@@ -99,11 +35,10 @@
   </header>
 
   <main id="home" class="container">
+    <!-- Hero Section -->
     <section class="hero" aria-labelledby="intro-title">
       <div>
-        <h1 id="intro-title" data-i18n="hero.title">
-          Civil Engineer & Materials Engineering Candidate (RWTH Aachen)
-        </h1>
+        <h1 id="intro-title" data-i18n="hero.title">Civil Engineer & Materials Engineering Candidate (RWTH Aachen)</h1>
         <p class="lead" data-i18n="hero.lead">
           On‑site construction experience + business transformation: designed and launched a paint service model that doubled revenue in one year. Seeking Werkstudent/Junior roles in Germany.
         </p>
@@ -118,11 +53,11 @@
         </div>
       </div>
       <div>
-        <!-- Replace headshot.jpg with your real photo (any size). It will auto‑crop. -->
-        <img class="headshot" src="headshot.jpg" alt="Portrait of George P Mathew" />
+        <img class="headshot" src="assets/img/headshot.jpg" alt="Portrait of George P Mathew" />
       </div>
     </section>
 
+    <!-- Value Proposition -->
     <section id="value" class="section" aria-labelledby="value-title">
       <h2 id="value-title" data-i18n="value.title">Value proposition</h2>
       <div class="cards">
@@ -141,6 +76,7 @@
       </div>
     </section>
 
+    <!-- Project Showcase -->
     <section id="projects" class="section" aria-labelledby="projects-title">
       <h2 id="projects-title" data-i18n="projects.title">Project showcase</h2>
       <div class="cards">
@@ -153,7 +89,6 @@
             <li data-i18n="projects.p1.li3">Result: doubled total revenue within 1 year; improved customer retention and referrals.</li>
           </ul>
         </article>
-
         <article class="card" style="grid-column: span 6">
           <h3 data-i18n="projects.p2.title">Site Supervision – SG Construction Company</h3>
           <p class="meta" data-i18n="projects.p2.meta">Mumbai • 02/2023–11/2023</p>
@@ -162,7 +97,6 @@
             <li data-i18n="projects.p2.li2">Resolved on‑site issues; monitored QA/QC to meet milestones.</li>
           </ul>
         </article>
-
         <article class="card" style="grid-column: span 6">
           <h3 data-i18n="projects.p3.title">Precast QA/QC – Excel Precast Solutions</h3>
           <p class="meta" data-i18n="projects.p3.meta">Bangalore • 10/2021–09/2022</p>
@@ -174,6 +108,7 @@
       </div>
     </section>
 
+    <!-- Resume & Skills -->
     <section id="resume" class="section" aria-labelledby="resume-title">
       <h2 id="resume-title" data-i18n="resume.title">Résumé & Skills</h2>
       <div class="resume-grid">
@@ -225,18 +160,17 @@
       </div>
     </section>
 
+    <!-- Contact -->
     <section id="contact" class="section" aria-labelledby="contact-title">
       <h2 id="contact-title" data-i18n="contact.title">Contact</h2>
       <div class="contact card">
         <p data-i18n="contact.blurb">Based in Germany and available for Werkstudent, part‑time, or full‑time junior engineering roles. I respond within 24 hours.</p>
         <div class="social">
           <a class="pill" href="mailto:georgepmathew424@gmail.com" target="_blank" rel="noopener">
-            <!-- mail icon -->
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M3 6h18v12H3V6Zm9 5L4 7h16l-8 4Z" stroke="currentColor" stroke-width="1.6"/></svg>
             <span>georgepmathew424@gmail.com</span>
           </a>
           <a class="pill" href="https://www.linkedin.com/in/georgepmathew/" target="_blank" rel="noopener" aria-label="LinkedIn">
-            <!-- LinkedIn icon -->
             <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4zM8 8h3.8v2.2H12c.5-1 1.7-2.2 3.6-2.2 3.9 0 4.6 2.6 4.6 6V24h-4v-6.6c0-1.6 0-3.6-2.2-3.6s-2.6 1.7-2.6 3.5V24H8V8z"/></svg>
             <span>LinkedIn</span>
           </a>
@@ -253,6 +187,7 @@
     </section>
   </main>
 
+  <!-- Mobile Nav -->
   <nav class="mobile-nav" aria-label="Quick navigation">
     <div class="container bar">
       <a href="#home" aria-label="Home">
@@ -264,100 +199,4 @@
         <span data-i18n="nav.projects">Projects</span>
       </a>
       <a href="#resume" aria-label="Résumé">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M6 2h9l3 3v15a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2Z" stroke="currentColor" stroke-width="1.6"/><path d="M7 8h10M7 12h10M7 16h7" stroke="currentColor" stroke-width="1.6"/></svg>
-        <span data-i18n="nav.resume">Résumé</span>
-      </a>
-      <a href="#contact" aria-label="Contact">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M3 6h18v12H3V6Zm9 5L4 7h16l-8 4Z" stroke="currentColor" stroke-width="1.6"/></svg>
-        <span data-i18n="nav.contact">Contact</span>
-      </a>
-    </div>
-  </nav>
-
-  <!-- Schema.org for richer Google/LinkedIn sharing -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"Person",
-    "name":"George P Mathew",
-    "email":"mailto:georgepmathew424@gmail.com",
-    "url":"https://georgepmathew.github.io/portfolio/",
-    "sameAs":[
-      "https://www.linkedin.com/in/georgepmathew/",
-      "https://x.com/EngineerGPM",
-      "https://www.facebook.com/engineergpm/"
-    ],
-    "jobTitle":"Civil Engineer | Materials Engineering Candidate",
-    "alumniOf":"RWTH Aachen University"
-  }
-  </script>
-
-  <!-- Minimal i18n and persistence -->
-  <script>
-    const t = {
-      en: {
-        'nav.value':'Value', 'nav.projects':'Projects', 'nav.resume':'Résumé', 'nav.contact':'Contact', 'nav.home':'Home',
-        'hero.title':'Civil Engineer & Materials Engineering Candidate (RWTH Aachen)',
-        'hero.lead':'On‑site construction experience + business transformation: designed and launched a paint service model that doubled revenue in one year. Seeking Werkstudent/Junior roles in Germany.',
-        'hero.cta':'See proof', 'hero.cta2':'Hire me',
-        'hero.badge1':'Engineering credibility first', 'hero.badge2':'Available now in Germany', 'hero.badge3':'Open to part‑time & full‑time',
-        'value.title':'Value proposition',
-        'value.v1.title':'On‑Site Engineering', 'value.v1.copy':'Supervised pile foundations, precast erection, finishing works; ensured quality and on‑time milestones.',
-        'value.v2.title':'Commercial Acumen', 'value.v2.copy':'Launched a paint service at Best Trading; market analysis → service design → local marketing → 100% sales growth in 12 months.',
-        'value.v3.title':'Advanced Academics', 'value.v3.copy':'Materials Engineering Studies (RWTH Aachen). Strong software stack: AutoCAD, SketchUp, MS Office; Adobe suite.',
-        'projects.title':'Project showcase',
-        'projects.p1.title':'Business Transformation – Best Trading (Paint Service)', 'projects.p1.meta':'Pathanapuram • 2023–2024',
-        'projects.p1.li1':'Challenge: sales plateau with passive retail model.', 'projects.p1.li2':'Action: created a bundled paint service (consultation + supply + application), priced & promoted locally.', 'projects.p1.li3':'Result: doubled total revenue within 1 year; improved customer retention and referrals.',
-        'projects.p2.title':'Site Supervision – SG Construction Company', 'projects.p2.meta':'Mumbai • 02/2023–11/2023',
-        'projects.p2.li1':'Supervised pile foundation & finishing works; coordinated subcontractors and suppliers.', 'projects.p2.li2':'Resolved on‑site issues; monitored QA/QC to meet milestones.',
-        'projects.p3.title':'Precast QA/QC – Excel Precast Solutions', 'projects.p3.meta':'Bangalore • 10/2021–09/2022', 'projects.p3.li1':'Managed erection of wall panels, beams, slabs; conducted grouting & repairs.', 'projects.p3.li2':'Assisted in quality checks of precast components and timely task completion.',
-        'resume.title':'Résumé & Skills', 'resume.education':'Education', 'resume.skills':'Skills', 'resume.skills2':'QA/QC', 'resume.skills3':'Site Supervision', 'resume.skills4':'Marketing & Sales', 'resume.languages':'English (B2/C1), Malayalam (Native), Tamil, Hindi',
-        'resume.e1.title':'Business Assistant – Best Trading', 'resume.e1.meta':'Pathanapuram • 12/2023–Present', 'resume.e1.li1':'Customer guidance and technical advice; billing operations.', 'resume.e1.li2':'Led local marketing: promotions, flyers, service launch.',
-        'resume.e2.title':'Junior Engineer – SG Construction Company', 'resume.e2.meta':'Mumbai • 02/2023–11/2023',
-        'resume.e3.title':'Graduate Engineer Trainee – Excel Precast Solutions', 'resume.e3.meta':'Bangalore • 10/2021–09/2022',
-        'contact.title':'Contact', 'contact.blurb':'Based in Germany and available for Werkstudent, part‑time, or full‑time junior engineering roles. I respond within 24 hours.'
-      },
-      de: {
-        'nav.value':'Mehrwert', 'nav.projects':'Projekte', 'nav.resume':'Lebenslauf', 'nav.contact':'Kontakt', 'nav.home':'Start',
-        'hero.title':'Bauingenieur & Masterstudent Werkstofftechnik (RWTH Aachen)',
-        'hero.lead':'Praxis auf der Baustelle + Transformation im Geschäft: Entwicklung und Einführung eines Maler‑Service, der den Umsatz in 12 Monaten verdoppelte. Suche Werkstudenten‑/Junior‑Positionen in Deutschland.',
-        'hero.cta':'Belege ansehen', 'hero.cta2':'Jetzt anfragen',
-        'hero.badge1':'Technische Glaubwürdigkeit zuerst', 'hero.badge2':'Sofort verfügbar in Deutschland', 'hero.badge3':'Teilzeit & Vollzeit möglich',
-        'value.title':'Ihr Nutzen',
-        'value.v1.title':'Praxis auf der Baustelle', 'value.v1.copy':'Überwachung von Pfahlgründungen, Montage von Fertigteilen und Ausbau; Qualität & Termine gesichert.',
-        'value.v2.title':'Kaufmännisches Verständnis', 'value.v2.copy':'Einführung eines Maler‑Services bei Best Trading; Marktanalyse → Leistungsdesign → lokale Vermarktung → 100% Umsatzwachstum in 12 Monaten.',
-        'value.v3.title':'Akademischer Hintergrund', 'value.v3.copy':'Studium Werkstofftechnik (RWTH Aachen). Software: AutoCAD, SketchUp, MS Office; Adobe‑Suite.',
-        'projects.title':'Projektbeispiele',
-        'projects.p1.title':'Business‑Transformation – Best Trading (Maler‑Service)', 'projects.p1.meta':'Pathanapuram • 2023–2024',
-        'projects.p1.li1':'Herausforderung: Umsatzstagnation im passiven Einzelhandel.', 'projects.p1.li2':'Vorgehen: Paketierter Maler‑Service (Beratung + Lieferung + Ausführung), bepreist & lokal beworben.', 'projects.p1.li3':'Ergebnis: Verdopplung des Gesamtumsatzes in 12 Monaten; höhere Kundenbindung.',
-        'projects.p2.title':'Bauleitung – SG Construction Company', 'projects.p2.meta':'Mumbai • 02/2023–11/2023',
-        'projects.p2.li1':'Überwachung von Pfahlgründung & Ausbau; Koordination von Nachunternehmern und Lieferanten.', 'projects.p2.li2':'Lösen von Baustellenproblemen; QA/QC‑Kontrolle.',
-        'projects.p3.title':'Fertigteil‑QA/QC – Excel Precast Solutions', 'projects.p3.meta':'Bangalore • 10/2021–09/2022', 'projects.p3.li1':'Montage von Wänden, Trägern, Platten; Verfugung & Reparatur.', 'projects.p3.li2':'Qualitätsprüfungen der Fertigteile und termingerechte Umsetzung.',
-        'resume.title':'Lebenslauf & Skills', 'resume.education':'Ausbildung', 'resume.skills':'Fähigkeiten', 'resume.skills2':'QA/QC', 'resume.skills3':'Bauleitung', 'resume.skills4':'Marketing & Vertrieb', 'resume.languages':'Englisch (B2/C1), Malayalam (Muttersprache), Tamil, Hindi',
-        'resume.e1.title':'Business Assistant – Best Trading', 'resume.e1.meta':'Pathanapuram • 12/2023–Heute', 'resume.e1.li1':'Kundenberatung & technische Auskünfte; Abrechnung.', 'resume.e1.li2':'Lokales Marketing geleitet: Aktionen, Flyer, Service‑Launch.',
-        'resume.e2.title':'Junior Engineer – SG Construction Company', 'resume.e2.meta':'Mumbai • 02/2023–11/2023',
-        'resume.e3.title':'Trainee – Excel Precast Solutions', 'resume.e3.meta':'Bangalore • 10/2021–09/2022',
-        'contact.title':'Kontakt', 'contact.blurb':'Ansässig in Deutschland; verfügbar für Werkstudenten‑, Teilzeit‑ oder Junior‑Vollzeitstellen. Antwort innerhalb von 24 Stunden.'
-      }
-    };
-
-    const setLang = (lang) => {
-      const dict = t[lang] || t.en;
-      document.documentElement.lang = lang;
-      document.querySelectorAll('[data-i18n]').forEach(el=>{
-        const key = el.getAttribute('data-i18n');
-        if(dict[key]) el.textContent = dict[key];
-      });
-      localStorage.setItem('lang', lang);
-      document.getElementById('lang-en').classList.toggle('active', lang==='en');
-      document.getElementById('lang-de').classList.toggle('active', lang==='de');
-      document.getElementById('lang-en').setAttribute('aria-pressed', lang==='en');
-      document.getElementById('lang-de').setAttribute('aria-pressed', lang==='de');
-    };
-
-    document.getElementById('lang-en').addEventListener('click', ()=>setLang('en'));
-    document.getElementById('lang-de').addEventListener('click', ()=>setLang('de'));
-    setLang(localStorage.getItem('lang')||'en');
-  </script>
-</body>
-</html>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M6 2h9l3 3v15a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2Z" stroke="currentColor" stroke-width="1.6"/><path d="
